--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,7 +21,7 @@ endif
 dosbox_x_SOURCES = dosbox.cpp $(ico_stuff)
 dosbox_x_LDADD = debug/libdebug.a dos/libdos.a shell/libshell.a builtin/libbuiltin.a \
                ints/libints.a misc/libmisc.a \
-               libs/porttalk/libporttalk.a gui/libgui.a hardware/libhardware.a \
+               gui/libgui.a hardware/libhardware.a \
 	       cpu/libcpu.a fpu/libfpu.a gui/libgui.a \
 		   output/liboutput.a libs/zmbv/libzmbv.a
 
