--- a/src/libs/Makefile.in
+++ b/src/libs/Makefile.in
@@ -285,7 +285,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/include
-SUBDIRS = zmbv porttalk
+SUBDIRS = zmbv
 all: all-recursive
 
 .SUFFIXES:
