--- a/src/hardware/Makefile.in
+++ b/src/hardware/Makefile.in
@@ -103,7 +103,7 @@ am_libhardware_a_OBJECTS = hardware.$(OBJEXT) iohandler.$(OBJEXT) \
 	keyboard.$(OBJEXT) memory.$(OBJEXT) mixer.$(OBJEXT) \
 	pic.$(OBJEXT) timer.$(OBJEXT) vga.$(OBJEXT) vga_crtc.$(OBJEXT) \
 	vga_dac.$(OBJEXT) vga_draw.$(OBJEXT) vga_gfx.$(OBJEXT) \
-	vga_memory.$(OBJEXT) vga_misc.$(OBJEXT)
+	vga_memory.$(OBJEXT)
 libhardware_a_OBJECTS = $(am_libhardware_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -325,7 +325,7 @@ noinst_LIBRARIES = libhardware.a
 libhardware_a_SOURCES = hardware.cpp iohandler.cpp keyboard.cpp \
                         memory.cpp mixer.cpp pic.cpp timer.cpp \
 			vga.cpp vga_crtc.cpp vga_dac.cpp vga_draw.cpp vga_gfx.cpp \
-			vga_memory.cpp vga_misc.cpp
+			vga_memory.cpp
 
 all: all-recursive
 
@@ -389,7 +389,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vga_draw.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vga_gfx.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vga_memory.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vga_misc.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
