--- a/src/dos/Makefile.in
+++ b/src/dos/Makefile.in
@@ -104,7 +104,7 @@ am_libdos_a_OBJECTS = dos.$(OBJEXT) dos_devices.$(OBJEXT) \
 	dos_memory.$(OBJEXT) dos_misc.$(OBJEXT) dos_classes.$(OBJEXT) \
 	dos_programs.$(OBJEXT) dos_tables.$(OBJEXT) drives.$(OBJEXT) \
 	drive_virtual.$(OBJEXT) drive_local.$(OBJEXT) \
-	drive_cache.$(OBJEXT) drive_fat.$(OBJEXT)
+	drive_cache.$(OBJEXT)
 libdos_a_OBJECTS = $(am_libdos_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -294,7 +294,7 @@ noinst_LIBRARIES = libdos.a
 EXTRA_DIST = scsidefs.h wnaspi32.h dos_codepages.h
 libdos_a_SOURCES = dos.cpp dos_devices.cpp dos_execute.cpp dos_files.cpp dos_ioctl.cpp dos_memory.cpp \
                    dos_misc.cpp dos_classes.cpp dos_programs.cpp dos_tables.cpp \
-		   drives.cpp drives.h drive_virtual.cpp drive_local.cpp drive_cache.cpp drive_fat.cpp \
+		   drives.cpp drives.h drive_virtual.cpp drive_local.cpp drive_cache.cpp \
 		   dev_con.h
 
 all: all-am
@@ -357,7 +357,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dos_programs.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dos_tables.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/drive_cache.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/drive_fat.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/drive_local.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/drive_virtual.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/drives.Po@am__quote@
