HEXMEM does not work anymore

--- a/src/builtin/Makefile.in
+++ b/src/builtin/Makefile.in
@@ -101,10 +101,9 @@ libbuiltin_a_AR = $(AR) $(ARFLAGS)
 libbuiltin_a_LIBADD =
 am_libbuiltin_a_OBJECTS = dsxmenu_exe_pc98.$(OBJEXT) \
 	dsxmenu_exe_pc.$(OBJEXT) cwsdpmi_exe.$(OBJEXT) \
-	dos32a_exe.$(OBJEXT) dos4gw_exe.$(OBJEXT) \
-	hexmem16_exe.$(OBJEXT) hexmem32_exe.$(OBJEXT) \
-	debug_exe.$(OBJEXT) tree_exe.$(OBJEXT) move_exe.$(OBJEXT) \
-	mem_com.$(OBJEXT) find_exe.$(OBJEXT) dosidle_exe.$(OBJEXT) \
+	dos32a_exe.$(OBJEXT) dos4gw_exe.$(OBJEXT) debug_exe.$(OBJEXT) \
+	tree_exe.$(OBJEXT) move_exe.$(OBJEXT) mem_com.$(OBJEXT) \
+	find_exe.$(OBJEXT) dosidle_exe.$(OBJEXT) \
 	lastdriv_com.$(OBJEXT) fcbs_com.$(OBJEXT) xcopy_exe.$(OBJEXT) \
 	append_exe.$(OBJEXT) device_com.$(OBJEXT) \
 	buffers_com.$(OBJEXT) copy_exe.$(OBJEXT) 28_com.$(OBJEXT) \
@@ -289,8 +288,6 @@ libbuiltin_a_SOURCES = \
 	cwsdpmi_exe.cpp	\
 	dos32a_exe.cpp \
 	dos4gw_exe.cpp \
-	hexmem16_exe.cpp \
-	hexmem32_exe.cpp \
 	debug_exe.cpp \
 	tree_exe.cpp \
 	move_exe.cpp \
@@ -373,8 +370,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dsxmenu_exe_pc98.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fcbs_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/find_exe.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hexmem16_exe.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hexmem32_exe.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lastdriv_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mem_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/move_exe.Po@am__quote@
