--- a/src/builtin/Makefile.in
+++ b/src/builtin/Makefile.in
@@ -99,15 +99,11 @@ am__v_AR_0 = @echo "  AR      " $@;
 am__v_AR_1 = 
 libbuiltin_a_AR = $(AR) $(ARFLAGS)
 libbuiltin_a_LIBADD =
-am_libbuiltin_a_OBJECTS = dsxmenu_exe_pc98.$(OBJEXT) \
-	dsxmenu_exe_pc.$(OBJEXT) cwsdpmi_exe.$(OBJEXT) \
-	dos32a_exe.$(OBJEXT) dos4gw_exe.$(OBJEXT) debug_exe.$(OBJEXT) \
-	tree_exe.$(OBJEXT) move_exe.$(OBJEXT) mem_com.$(OBJEXT) \
-	find_exe.$(OBJEXT) dosidle_exe.$(OBJEXT) \
-	lastdriv_com.$(OBJEXT) fcbs_com.$(OBJEXT) xcopy_exe.$(OBJEXT) \
-	append_exe.$(OBJEXT) device_com.$(OBJEXT) \
-	buffers_com.$(OBJEXT) copy_exe.$(OBJEXT) 28_com.$(OBJEXT) \
-	50_com.$(OBJEXT) 25_com.$(OBJEXT)
+am_libbuiltin_a_OBJECTS = cwsdpmi_exe.$(OBJEXT) dos32a_exe.$(OBJEXT) \
+	dos4gw_exe.$(OBJEXT) debug_exe.$(OBJEXT) tree_exe.$(OBJEXT) \
+	move_exe.$(OBJEXT) mem_com.$(OBJEXT) find_exe.$(OBJEXT) \
+	dosidle_exe.$(OBJEXT) xcopy_exe.$(OBJEXT) append_exe.$(OBJEXT) \
+	copy_exe.$(OBJEXT)
 libbuiltin_a_OBJECTS = $(am_libbuiltin_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -283,8 +279,6 @@ top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LIBRARIES = libbuiltin.a
 libbuiltin_a_SOURCES = \
-	dsxmenu_exe_pc98.cpp \
-	dsxmenu_exe_pc.cpp \
 	cwsdpmi_exe.cpp	\
 	dos32a_exe.cpp \
 	dos4gw_exe.cpp \
@@ -294,16 +288,9 @@ libbuiltin_a_SOURCES = \
 	mem_com.cpp \
 	find_exe.cpp \
 	dosidle_exe.cpp \
-	lastdriv_com.cpp \
-	fcbs_com.cpp \
 	xcopy_exe.cpp \
 	append_exe.cpp \
-	device_com.cpp \
-	buffers_com.cpp \
-	copy_exe.cpp \
-	28_com.cpp \
-	50_com.cpp \
-	25_com.cpp
+	copy_exe.cpp
 
 all: all-am
 
@@ -354,23 +341,14 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/25_com.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/28_com.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/50_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/append_exe.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/buffers_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/copy_exe.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwsdpmi_exe.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug_exe.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/device_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dos32a_exe.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dos4gw_exe.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dosidle_exe.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dsxmenu_exe_pc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dsxmenu_exe_pc98.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fcbs_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/find_exe.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lastdriv_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mem_com.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/move_exe.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree_exe.Po@am__quote@
