--- a/src/ints/Makefile.am
+++ b/src/ints/Makefile.am
@@ -2,6 +2,6 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 
 noinst_LIBRARIES = libints.a
 libints_a_SOURCES = xms.cpp xms.h ems.cpp \
-                    int10.cpp int10.h int10_char.cpp int10_memory.cpp int10_modes.cpp \
+                    int10.cpp int10.h int10_char.cpp int10_modes.cpp \
                     int10_video_state.cpp int10_vptable.cpp \
                     bios.cpp bios_keyboard.cpp
