--- a/src/ints/Makefile.in
+++ b/src/ints/Makefile.in
@@ -100,8 +100,7 @@ am__v_AR_1 =
 libints_a_AR = $(AR) $(ARFLAGS)
 libints_a_LIBADD =
 am_libints_a_OBJECTS = xms.$(OBJEXT) ems.$(OBJEXT) int10.$(OBJEXT) \
-	int10_char.$(OBJEXT) int10_modes.$(OBJEXT) bios.$(OBJEXT) \
-	bios_keyboard.$(OBJEXT)
+	int10_char.$(OBJEXT) bios.$(OBJEXT) bios_keyboard.$(OBJEXT)
 libints_a_OBJECTS = $(am_libints_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -289,7 +288,7 @@ top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LIBRARIES = libints.a
 libints_a_SOURCES = xms.cpp xms.h ems.cpp \
-                    int10.cpp int10.h int10_char.cpp int10_modes.cpp \
+                    int10.cpp int10.h int10_char.cpp \
                     bios.cpp bios_keyboard.cpp
 
 all: all-am
@@ -346,7 +345,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ems.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_char.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/int10_modes.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xms.Po@am__quote@
 
 .cpp.o:
