--- a/src/ints/Makefile.am
+++ b/src/ints/Makefile.am
@@ -1,6 +1,6 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
 noinst_LIBRARIES = libints.a
-libints_a_SOURCES = xms.cpp xms.h ems.cpp \
+libints_a_SOURCES = xms.cpp xms.h \
                     int10.cpp int10.h int10_char.cpp \
                     bios.cpp bios_keyboard.cpp
