--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -81,7 +81,6 @@ build_triplet = @build@
 host_triplet = @host@
 bin_PROGRAMS = dosbox-x$(EXEEXT)
 @EMSCRIPTEN_FALSE@am__append_1 = aviwriter/libaviwriter.a
-@C_DIRECT3D_TRUE@am__append_2 = output/direct3d/liboutputdirect3d.a
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(srcdir)/dosbox.plist.in $(top_srcdir)/depcomp
@@ -104,7 +103,7 @@ dosbox_x_DEPENDENCIES = debug/libdebug.a dos/libdos.a shell/libshell.a \
 	builtin/libbuiltin.a ints/libints.a misc/libmisc.a \
 	gui/libgui.a hardware/libhardware.a cpu/libcpu.a fpu/libfpu.a \
 	gui/libgui.a output/liboutput.a libs/zmbv/libzmbv.a \
-	$(am__append_1) $(am__append_2)
+	$(am__append_1)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -360,7 +359,7 @@ dosbox_x_LDADD = debug/libdebug.a dos/libdos.a shell/libshell.a \
 	builtin/libbuiltin.a ints/libints.a misc/libmisc.a \
 	gui/libgui.a hardware/libhardware.a cpu/libcpu.a fpu/libfpu.a \
 	gui/libgui.a output/liboutput.a libs/zmbv/libzmbv.a \
-	$(am__append_1) $(am__append_2)
+	$(am__append_1)
 EXTRA_DIST = winres.rc dosbox.ico
 all: all-recursive
 
