--- a/src/hardware/Makefile.am
+++ b/src/hardware/Makefile.am
@@ -7,6 +7,5 @@ EXTRA_DIST =
 noinst_LIBRARIES = libhardware.a
 
 libhardware_a_SOURCES = hardware.cpp iohandler.cpp keyboard.cpp \
-                        memory.cpp mixer.cpp pic.cpp timer.cpp \
-						vga.cpp
+                        memory.cpp mixer.cpp pic.cpp vga.cpp
 
