--- a/src/builtin/Makefile.in
+++ b/src/builtin/Makefile.in
@@ -108,8 +108,7 @@ am__v_AR_0 = @echo "  AR      " $@;
 am__v_AR_1 = 
 libbuiltin_a_AR = $(AR) $(ARFLAGS)
 libbuiltin_a_LIBADD =
-am_libbuiltin_a_OBJECTS = debug_exe.$(OBJEXT) move_exe.$(OBJEXT) \
-	mem_com.$(OBJEXT) find_exe.$(OBJEXT) copy_exe.$(OBJEXT)
+am_libbuiltin_a_OBJECTS = debug_exe.$(OBJEXT)
 libbuiltin_a_OBJECTS = $(am_libbuiltin_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -126,9 +125,7 @@ am__v_at_1 =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__maybe_remake_depfiles = depfiles
-am__depfiles_remade = ./$(DEPDIR)/copy_exe.Po ./$(DEPDIR)/debug_exe.Po \
-	./$(DEPDIR)/find_exe.Po ./$(DEPDIR)/mem_com.Po \
-	./$(DEPDIR)/move_exe.Po
+am__depfiles_remade = ./$(DEPDIR)/debug_exe.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -286,11 +283,7 @@ top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LIBRARIES = libbuiltin.a
 libbuiltin_a_SOURCES = \
-	debug_exe.cpp \
-	move_exe.cpp \
-	mem_com.cpp \
-	find_exe.cpp \
-	copy_exe.cpp
+	debug_exe.cpp
 
 all: all-am
 
@@ -340,11 +333,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/copy_exe.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug_exe.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/find_exe.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mem_com.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/move_exe.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -492,11 +481,7 @@ clean: clean-am
 clean-am: clean-generic clean-noinstLIBRARIES mostlyclean-am
 
 distclean: distclean-am
-		-rm -f ./$(DEPDIR)/copy_exe.Po
-	-rm -f ./$(DEPDIR)/debug_exe.Po
-	-rm -f ./$(DEPDIR)/find_exe.Po
-	-rm -f ./$(DEPDIR)/mem_com.Po
-	-rm -f ./$(DEPDIR)/move_exe.Po
+		-rm -f ./$(DEPDIR)/debug_exe.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -542,11 +527,7 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-		-rm -f ./$(DEPDIR)/copy_exe.Po
-	-rm -f ./$(DEPDIR)/debug_exe.Po
-	-rm -f ./$(DEPDIR)/find_exe.Po
-	-rm -f ./$(DEPDIR)/mem_com.Po
-	-rm -f ./$(DEPDIR)/move_exe.Po
+		-rm -f ./$(DEPDIR)/debug_exe.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
